# Titan-HFT

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  HANDOFF.md  PROGRESS.md  README.md  ab.sh  bench.sh  bench_end_to_end.sh  bot.sh  build.sh  pipeline.sh  profile.sh  profile_report.txt  profile_report_off.txt  profile_report_on.txt  server.sh  tsan.sh
bench/: ab_bench.cpp  matcher_bench.cpp  pipeline_bench.cpp  workload.hpp
bots/: market_maker.cpp
docs/: PROGRESS.md
include/titan/book/: matcher.hpp  order.hpp  order_book.hpp  pin_node.hpp  price_level.hpp  rb_price_index.hpp  snapshot.hpp  trade_event.hpp
include/titan/domain/: types.hpp
include/titan/io/: journaler.hpp
include/titan/memory/: arena.hpp
include/titan/net/: tcp_gateway.hpp  udp_publisher.hpp
include/titan/pipeline/: egress_ring.hpp  ingress_ring.hpp  mpsc_ring.hpp  sequencer.hpp  spsc_ring.hpp
src/: main.cpp
tests/: ingress_ring_tests.cpp  journaler_tests.cpp  matcher_tests.cpp  mc_listener.py  mpsc_ring_tests.cpp  multicast_test.sh  price_validation_tests.cpp  rb_tree_tests.cpp  sequencer_tests.cpp  snapshot_tests.cpp  spsc_ring_tests.cpp  tcp_blaster.cpp  tcp_gateway_tests.cpp  tests.cpp  ut.hpp
ui/: app.py  fake_bot.py  index.html
